<resources>
    <string name="app_name">IoTInfo</string>
    <string name="latitude">Latitude:</string>
    <string name="latitudedata"><![CDATA[<latitudeData>]]></string>
    <string name="longitudedata"><![CDATA[<LongitudeData>]]></string>
    <string name="longitude">Longitude:</string>
    <string name="step">Step:</string>
    <string name="stepdata"><![CDATA[<StepData>]]></string>
    <string name="distance">Distance:</string>
    <string name="distancedata"><![CDATA[<DistanceData>]]></string>
    <string name="connect">Connect</string>
    <string name="url">locolhost:8182</string>
    <string name="preference_file_key">iotinfo.PREFERENCE_FILE_KEY</string>
    <string name="saved_user_name">USERNAME</string>
    <string name="saved_url">URL</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="url_lable">URL:</string>
    <string name="save">Save</string>
    <string name="name_lable">Username:</string>
    <string name="title_settings">Settings</string>
    <string name="no_name_pop">Please set your name</string>
    <string name="saved_pop">Setting saved</string>
</resources>